# Risc-V-Keyer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sdkconfig  setupfish.fish
Design-Files (Obsidian Vault)/.obsidian/: workspace.json
Design-Files (Obsidian Vault)/HW Engineering/: Hardware Snippets.md
Design-Files (Obsidian Vault)/SW Engineering/: DM1AR_prompting_history.md  class-Dia.mermaid
components/morse_keyer/: CMakeLists.txt
components/morse_keyer/include/: MorseKeyer.hpp
components/morse_keyer/src/: MorseKeyer.cpp
components/network/: CMakeLists.txt
components/network/include/: NetworkManager.hpp
components/network/src/: NetworkManager.cpp
components/rvkeyer/: CMakeLists.txt
components/rvkeyer/include/: database_handler.h  dynset.h  esp32_init.h  isr_handler.h  log_handler.h  morse_decode.h  morse_output.h  morse_symbol_input.h  morse_translator.h  network_manager.h  nvm_store.h  rvkeyer.h  shutdown.h  watch_dog_timer.h
components/rvkeyer/src/: database_handler.cpp  dynset.cpp  esp32_init.cpp  isr_handler.cpp  log_handler.cpp  morse_decode.cpp  morse_output.cpp  morse_symbol_input.cpp  morse_translator.cpp  network_manager.cpp  nvm_store.cpp  rvkeyer.cpp  shutdown.cpp  watch_dog_timer.cpp
main/: CMakeLists.txt  hello_world_main.cpp  main.cpp  rvkeyer.cpp
sw-eng/: ChatGPTprompts.md  DM1AR_prompting_history.md  History_of_prompting.md  class_diagram-2024-07-28-1630_bearbeitet.excalidraw
